# distribute-me

./: Makefile  README.md  pyproject.toml
distribute_me/: main.py
