[tool.poetry]
name = "distribute-me"
version = "0.1.0"
description = "A packaging example"
authors = ["OilProducts <christopher.l.charland@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
